# nmrlib

./: README.md  nmrlib.py  pyproject.toml
nmrlib/: __init__.py  nmrlib.py
